css/style.css
.hero-bg{
    background-image: linear-gradient(to right,  rgba(255,255,255) 40%,  transparent 100%), url('../img/hero_bg.webp');
    background-attachment: fixed;
    /* background-position: center; */
    /* background-size: cover;
    ,
     */
}

.menu-mobile{
    transform: translateX(100%);
    transition: transform 250ms ease-in-out;
}

.menu-mobile.show {
    transform: translateX(0%);
}

.text-apparition{
    animation: text-apparition ease-in-out forwards; 
    animation-duration: 1s;
    animation-delay: 500ms;
    transform: translateY(35%) scale(0.8);
    filter: blur(5px);
    opacity: 0;
}

.image-apparition{
    animation: image-apparition ease-in-out forwards; 
    animation-duration: 1s;
    animation-delay: 500ms;
    transform: scale(0.8);
    filter: blur(5px);
    opacity: 0;
}

@keyframes image-apparition{
    to{
        transform: scale(1);
        opacity: 1;
        filter: blur(0px);
    }
}

@keyframes text-apparition{
    to{
        transform: translateY(0%) scale(1);
        opacity: 1;
        filter: blur(0px);
    }
}

.portfolio-grid {
    grid-template-areas:
        "box-1 box-2  box-4 box-5 box-10"
        "box-6 box-3  box-8 box-9 box-10 "
        "box-6 box-7 box-8 box-9 box-10";
        /* "box-6 box-5 box-8 box-10 box-7 box-10" */
}

.fade-up{
    transform: translateY(15%) scale(0.65);
    opacity: 0;
    transition: all 700ms ease-in-out ;
    /* transition-delay: 500ms; */
}

.blur-up{
    transform: scale(0.9);
    opacity: 0;
    filter: blur(3px);
    transition: all 300ms ease-in-out ;
}

.blur-up.active{
    transform: scale(1);
    filter: blur(0px);
    opacity: 1;
}

.fade-up.active{
    transform: translateY(0%) scale(1);
    opacity: 1;
}

.fade-right{
    transform: translateX(-25%);
    opacity: 0;
    transition: all 700ms ease-in-out ;
    /* transition-delay: 500ms; */
}

.fade-left{
    transform: translateX(25%);
    opacity: 0;
    transition: all 700ms ease-in-out ;
    /* transition-delay: 500ms; */
}

.fade-right.active, .fade-left.active{
    transform: translateX(0%);
    opacity: 1;
}
/* .faq .text-container{
    transition: max-height 3s ease-in-out;
} */

